[package]
name = "moss-trimmer"
version = "1.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Archiver and parser for Measure of Software Similarity (MOSS) results"
homepage = "https://github.com/carsonwoods/moss-trimmer"
repository = "https://github.com/carsonwoods/moss-trimmer"
keywords = ["moss", "plagiarism-detection", "cli", "archiver"]


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
